--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "faker": "^5.5.3"
   },
   "repository": {
     "type": "git",
